--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Frontend Mentor | Crowdfunding product page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet"> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/dist/css/main.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -25,9 +25,6 @@
 
       <div id="hamburger" class="header__hamburger hide-for-desktop">
         <img src="/dist/img/icon-hamburger.svg" alt="">
-        <!-- <span></span>
-        <span></span>
-        <span></span> -->
       </div>
 
       <div class="header__links hide-for-mobile">
